MDEV-8130 Wrong error code/message while encrypting a partitioned InnoDB table

when checking for a flag, use & not ==